# HospitalService

./: .gitignore  build.sh  pyproject.toml  render.yaml
HospitalSystem/: asgi.py  settings.py  urls.py
appointment/: serializers.py  urls.py  views.py
chat/: admin.py  chat_consumers.py  conference_consumers.py  consumers.py  middleware.py  models.py  notification_consumers.py  routing.py  serializers.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_chathistory.py  0003_chatroom_active_users.py  0004_chathistory_read_status.py  0005_chathistory_file_type.py  0006_chathistory_file_name.py  0007_remove_chathistory_file_name.py  0008_chatroom_active_voice_users.py  0009_alter_chathistory_media.py
doctor/: serializers.py  urls.py  views.py
medicalBook/: admin.py  apps.py  models.py  seralizers.py  urls.py  views.py
medicalBook/migrations/: 0001_initial.py  0002_medicalbook_created_at_medicalbook_description_and_more.py  0003_alter_medicalbook_doctor_alter_medicalbook_patient.py  0004_alter_medicalbook_tests.py
patient/: models.py  serializers.py  urls.py  views.py
patient/migrations/: 0001_initial.py  0002_alter_appointment_time.py  0003_alter_appointment_time.py  0004_appointment_end_time_alter_appointment_time.py  0005_alter_appointment_doctor_alter_appointment_patient_and_more.py
templates/: appointment_email.html  reset_password.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_gender_alter_user_phone_and_more.py  0003_subrole_main_role_alter_subrole_sub_role.py  0004_remove_user_username.py  0005_alter_user_managers.py  0006_user_access_key.py  0007_fill_roles.py  0008_fill_sub_roles.py  0009_alter_user_first_name_alter_user_last_name.py  0010_alter_user_email.py  0014_fill_doctors_and_patients2.py  0015_resetpassword.py  0016_rename_role_user_roles.py  0017_user_is_blocked.py  0018_alter_user_avatar.py
