[tool.poetry]
name = "hospitalsystem"
version = "0.1.0"
description = ""
authors = ["Andrew Demchuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
django-grappelli = "4.0.1"
environs = "11.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "23.0.0"
uvicorn = { version = "0.30.6", extras = ["standard"] }
uvicorn-worker = "0.2.0"
django-cors-headers = "4.4.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
channels-redis = "4.2.0"
channels = { version = "4.1.0", extras = ["daphne"] }
django-allauth = "64.2.1"
drf-spectacular = "0.27.2"
Pillow = "10.4.0"
requests = "2.32.3"
whitenoise = "6.8.2"
boto3 = "1.35.64"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
